Make some changes in index page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-
+    <section>
+      <h1>This is the index page</h1>
+      <p>This is some text</p>
+    </section>
   </body>
 </html>
